Update assets & added test case
