# src/controller/asset.controller.js
@@ -1,7 +1,7 @@
 const express = require("express");
 const router = express.Router();
 const auth = require("../middleware/auth");
-const { assetInsert, assetGetAll } = require("../service/asset.service");
+const { assetInsert, assetGetAll, assetUpdate } = require("../service/asset.service");
 const { validationResult } = require("express-validator");
 const { validateAsset } = require("../middleware/validate");
 
@@ -32,4 +32,20 @@ router.get("/", auth, (req, res) => {
     });
 });
 
+router.put("/:asset_id", auth, validateAsset(), (req, res) => {
+    const validationErrors = validationResult(req);
+    if (!validationErrors.isEmpty()) {
+        res.status(400).send(`Validation errors: ${JSON.stringify(validationErrors.array())}`);
+    } else {
+        assetUpdate(req.params, req.body, (error, result) => {
+            if (result) {
+                res.status(201).json(result);
+            }
+            else {
+                console.error(`Error: ${JSON.stringify(error)}`);
+                res.status(400).send({ message: error.errors });
+            }
+        });
+    }
+});
 module.exports = router;
